[maven-release-plugin] prepare release evrythng-java-sdk-1.12.2

--- a/evrythng-commons/pom.xml
+++ b/evrythng-commons/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.evrythng</groupId>
         <artifactId>evrythng-java-sdk</artifactId>
-        <version>1.12.2-SNAPSHOT</version>
+        <version>1.12.2</version>
     </parent>
 	
     <artifactId>evrythng-commons</artifactId>
