--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.evrythng</groupId>
 	<artifactId>evrythng-java-sdk</artifactId>
 	<packaging>pom</packaging>
-	<version>1.16.0-SNAPSHOT</version>
+	<version>1.16.0</version>
 
 	<name>evrythng-java-sdk</name>
 	<description>Java tools around the EVRYTHNG API.</description>
@@ -126,7 +126,8 @@
 		<connection>scm:git:git://github.com/evrythng/evrythng-java-sdk.git</connection>
 		<developerConnection>scm:git:git@github.com:evrythng/evrythng-java-sdk.git</developerConnection>
 		<url>https://github.com/evrythng/evrythng-java-sdk</url>
-	</scm>
+	  <tag>evrythng-java-sdk-1.16.0</tag>
+  </scm>
 
 	<issueManagement>
 		<url>https://github.com/evrythng/evrythng-java-sdk/issues</url>
