--- a/thng-resource-model/pom.xml
+++ b/thng-resource-model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.evrythng</groupId>
 		<artifactId>evrythng-java-sdk</artifactId>
-		<version>1.16.0</version>
+		<version>1.16.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>thng-resource-model</artifactId>
