--- a/evrythng-tools/pom.xml
+++ b/evrythng-tools/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<version>1.30</version>
+		</dependency>
 	</dependencies>
 
 	<build>
