--- a/evrythng-tools/pom.xml
+++ b/evrythng-tools/pom.xml
@@ -10,6 +10,8 @@
 	<artifactId>evrythng-tools</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+    <name>evrythng-tools</name>
+
 	<properties>
 
 		<java.jdk.level>1.8</java.jdk.level>
@@ -64,5 +66,20 @@
 			</plugin>
 		</plugins>
 	</build>
+
+    <distributionManagement>
+        <repository>
+            <id>evrythng-releases</id>
+            <name>Evrythng Releases Repository</name>
+            <url>https://internal.evrythng.net/nexus/content/repositories/releases</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>evrythng-snapshots</id>
+            <name>Evrythng Snapshots Repository</name>
+            <url>https://internal.evrythng.net/nexus/content/repositories/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
