--- a/evrythng-tools/pom.xml
+++ b/evrythng-tools/pom.xml
@@ -18,7 +18,10 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 
-	</properties>
+        <version.maven-deploy-plugin>2.7</version.maven-deploy-plugin>
+        <version.maven-release-plugin>2.5</version.maven-release-plugin>
+
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -64,7 +67,24 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${version.maven-deploy-plugin}</version>
+                <configuration>
+                    <file>${project.name}.${project.packaging}</file>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${version.maven-release-plugin}</version>
+                <configuration>
+                    <arguments>-DskipTests</arguments>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
     <distributionManagement>
