--- a/evrythng-tools/pom.xml
+++ b/evrythng-tools/pom.xml
@@ -12,7 +12,13 @@
 
     <name>evrythng-tools</name>
 
-	<properties>
+    <scm>
+        <connection>scm:git:git://github.com/evrythng/evrythng-java-sdk.git</connection>
+        <developerConnection>scm:git:git@github.com:evrythng/evrythng-java-sdk.git</developerConnection>
+        <url>https://github.com/evrythng/evrythng-java-sdk</url>
+    </scm>
+
+    <properties>
 
 		<java.jdk.level>1.8</java.jdk.level>
 		<maven.compiler.source>1.8</maven.compiler.source>
