--- a/evrythng-tools/pom.xml
+++ b/evrythng-tools/pom.xml
@@ -60,6 +60,7 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 				<executions>
 					<execution>
