--- a/evrythng-tools/pom.xml
+++ b/evrythng-tools/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<packaging>jar</packaging>
 
-	<groupId>evrythng.com</groupId>
+	<groupId>com.evrythng</groupId>
 	<artifactId>evrythng-tools</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1-SNAPSHOT</version>
 
     <name>evrythng-tools</name>
 
@@ -16,7 +14,8 @@
         <connection>scm:git:git://github.com/evrythng/evrythng-java-sdk.git</connection>
         <developerConnection>scm:git:git@github.com:evrythng/evrythng-java-sdk.git</developerConnection>
         <url>https://github.com/evrythng/evrythng-java-sdk</url>
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
 
     <properties>
 
