--- a/evrythng-java-wrapper/pom.xml
+++ b/evrythng-java-wrapper/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.evrythng</groupId>
 		<artifactId>evrythng-java-sdk</artifactId>
-		<version>1.18.0-SNAPSHOT</version>
+		<version>1.18.0</version>
 	</parent>
 
 	<artifactId>evrythng-java-wrapper</artifactId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>thng-resource-model</artifactId>
-			<version>1.18.0-SNAPSHOT</version>
+			<version>1.18.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jboss-logging</artifactId>
