[maven-release-plugin] prepare for next development iteration

--- a/thng-resource-model/pom.xml
+++ b/thng-resource-model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.evrythng</groupId>
 		<artifactId>evrythng-java-sdk</artifactId>
-		<version>1.18.0</version>
+		<version>1.18.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>thng-resource-model</artifactId>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>evrythng-commons</artifactId>
-			<version>1.18.0</version>
+			<version>1.18.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jboss-logging</artifactId>
