--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.evrythng</groupId>
 	<artifactId>evrythng-java-sdk</artifactId>
 	<packaging>pom</packaging>
-	<version>1.18.0</version>
+	<version>1.18.1-SNAPSHOT</version>
 
 	<name>evrythng-java-sdk</name>
 	<description>Java tools around the EVRYTHNG API.</description>
@@ -153,7 +153,7 @@
 		<connection>scm:git:git://github.com/evrythng/evrythng-java-sdk.git</connection>
 		<developerConnection>scm:git:git@github.com:evrythng/evrythng-java-sdk.git</developerConnection>
 		<url>https://github.com/evrythng/evrythng-java-sdk</url>
-      <tag>evrythng-java-sdk-1.18.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
