Trying to fix the release

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
 		<connection>scm:git:git://github.com/evrythng/evrythng-java-sdk.git</connection>
 		<developerConnection>scm:git:git@github.com:evrythng/evrythng-java-sdk.git</developerConnection>
 		<url>https://github.com/evrythng/evrythng-java-sdk</url>
+        <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
