--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,6 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<!-- Ensure IDEs use the correct level for compiling. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -167,9 +166,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<configuration>
-							<passphrase>${gpg.passphrase}</passphrase>
-						</configuration>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -186,17 +182,13 @@
 	</profiles>
 
 	<distributionManagement>
-		<repository>
-			<id>evrythng-public-releases</id>
-			<name>Public Releases</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-			<uniqueVersion>false</uniqueVersion>
-		</repository>
 		<snapshotRepository>
-			<id>evrythng-public-snapshots</id>
-			<name>Public Snapshots</name>
+			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
 	</distributionManagement>
 </project>
